--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>Focused on Automation with a bit of creativity</p>
+        <!-- italian coding without spaghetti -->
+        
         
 
         {% if site.github.is_project_page %}
