--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>Focused on Automation with a bit of creativity</p>
+        <p>Focused on Automation with a <i>bit</i> of creativity</p>
         <!-- italian coding without spaghetti -->
         
         
