--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
         <p>Focused on Automation with a <i>bit</i> of creativity</p>
         <!-- italian coding without spaghetti -->
-        
+        <p>for any Information you can contact us at request@recipient.cc</p>
         
 
         {% if site.github.is_project_page %}
